# syllabus

./: LICENSE.md  Makefile  README.md  Setup.hs  syllabus.cabal
executable/: Main.hs
