name:                     syllabus
author:                   Remy Goldschmidt
version:                  0.0.1
build-type:               Simple
cabal-version:            >= 1.10
category:                 Utility
copyright:                2016 Remy Goldschmidt <taktoa@gmail.com>
extra-source-files:       README.md
license-file:             LICENSE.md
license:                  MIT
maintainer:               taktoa@gmail.com
synopsis:                 A tool for managing and predicting grades in college.
description:              A tool for managing and predicting grades in college.

library
    build-depends:        base                  == 4.*

                        -- Data types
                        , containers            == 0.5.*
                        , unordered-containers  == 0.2.*
                        , hashable              == 1.2.*
                        , uuid                  == 1.3.*
                        , time                  == 1.5.*
                        , thyme                 == 0.3.*
                        , text                  == 1.2.*
                        , bytestring            == 0.10.*

                        -- Web server
                        , scotty                == 0.11.*

                        -- Database
                        , acid-state            == 0.14.*
                        , safecopy              == 0.9.*

                        -- Concurrency
                        , stm                   == 2.4.*
                        , async                 == 2.1.*

                        -- Monad transformers
                        , mtl                   == 2.2.*
                        , transformers          == 0.4.*

                        -- Lens
                        , lens                  == 4.13.*

                        -- Pipes
                        , pipes                 == 4.1.*
                        , pipes-safe            == 2.2.*
                        , pipes-group           == 1.0.*
                        , pipes-parse           == 3.0.*
                        , pipes-bytestring      == 2.1.*
                        , pipes-concurrency     == 2.0.*

                        -- Parsing
                        , trifecta              == 1.5.*
                        , parsers               == 0.12.*

                        -- Exceptions
                        , exceptions            == 0.8.*

                        -- Miscellaneous
                        , here                  == 1.2.*
                        , vector-space          == 0.10.*
                        , random                == 1.1.*
                        , template-haskell      == 2.10.*
                        , data-default          == 0.5.*
                        , derive                == 2.5.*

    default-language:     Haskell2010
    exposed-modules:      Web.Syllabus
    ghc-options:          -Wall
                          -threaded
                          -fno-warn-type-defaults
                          -fno-warn-unused-imports
                          -fno-warn-unused-do-bind
    ghc-prof-options:     -auto-all -prof
    hs-source-dirs:       library
    default-extensions:   OverloadedStrings

executable syllabus
    build-depends:        base == 4.*
                        , syllabus
    default-language:     Haskell2010
    ghc-options:          -threaded
    ghc-prof-options:     -auto-all -prof
    hs-source-dirs:       executable
    main-is:              Main.hs
